# ivi_1

./: CODEX_RULES.md  Pipfile  README.md  project.md  pyproject.toml
app/: __init__.py  callbacks.py  layout.py  main.py
app/components/: __init__.py
app/styles/: base.css
core/: __init__.py  loaders.py  metrics.py  spec.py  transforms.py  types.py
tests/: test_callbacks.py  test_contracts.py  test_loaders.py  test_transforms.py
